--- a/Source-Front-App/src/app/laboratories/laboratories.css
+++ b/Source-Front-App/src/app/laboratories/laboratories.css
@@ -1,21 +1,21 @@
-.card-laboratory{
+.card-laboratory {
   cursor: pointer;
 }
 
-.card-laboratory:hover{
+.card-laboratory:hover {
   scale: 1.02;
 }
 
-.detalle-container{
+.detalle-container {
   display: grid;
   height: 100%;
   grid-template-columns: 200px 1fr;
   grid-template-rows: 220px 1fr;
   grid-template-areas: "detalleInfo detalleTable"
-  ". detalleTable";
+    ". detalleTable";
 }
 
-.detalle-info{
+.detalle-info {
   grid-area: detalleInfo;
   height: auto;
   padding: 20px;
@@ -24,11 +24,18 @@
   /* height: 100%; */
 }
 
-.detalle-tables{
+.detalle-tables {
   grid-area: detalleTable;
   padding: 20px;
   background-color: white;
   margin-left: 10px;
   border-radius: 5px;
   overflow: hidden;
+}
+
+.container-laboratories {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,
+      minmax(300px, 1fr));
+  gap: 16px;
 }
