--- a/Source-Front-App/src/layout/layout.css
+++ b/Source-Front-App/src/layout/layout.css
@@ -7,7 +7,7 @@
     "lsidebar lheader lheader"
     "lsidebar lmain lmain"
     "lsidebar lfooter lfooter";
-  transition-duration: 0.6s;
+  transition-duration: 0.3s;
 }
 
 @media(width<600px) {
@@ -58,19 +58,19 @@
   grid-area: lsidebar;
   display: flex;
   flex-direction: column;
-  transition-duration: 0.5s;
+  transition-duration: 0.3s;
 }
 
 .l-sidebar i {
-  transition-duration: 0.5s;
+  transition-duration: 0.3s;
 }
 
 .l-sidebar div {
-  transition-duration: 0.5s;
+  transition-duration: 0.3s;
 }
 
 .l-sidebar span {
-  transition-duration: 0.5s;
+  transition-duration: 0.3s;
   transition-property: width;
 }
 
@@ -88,10 +88,12 @@
   opacity: 0;
 }
 
-
+.l-sidebar.active button {
+  padding-left: 30px;
+}
 
 .l-sidebar button {
-  transition-duration: 2s;
+  transition-duration: 0.3s;
 }
 
 .l-sidebar header {
@@ -139,7 +141,7 @@
   grid-template-columns: 30px 1fr;
   justify-content: center;
   align-items: center;
-  padding: 0px 44px;
+  padding: 0px 10px;
   margin: 0px 0px;
 }
 
@@ -157,6 +159,7 @@
   border: 1px solid #1F2937;
   background: #1F2937;
 }
+
 
 
 /* body{
